--- a/Front-end/Actividad-1-7/Actividad.css
+++ b/Front-end/Actividad-1-7/Actividad.css
@@ -12,16 +12,14 @@ h1 {
   font-size: 40px;
   font-weight: bold;
 }
+.Contenido-noticia,
+.Segunda-Noticia {
+  display: inline;
+}
 
 h2 {
   color: black;
   font-size: 24px;
-  width: 45%;
-}
-
-.Contenido-noticia,
-.Segunda-Noticia {
-  display: flex;
 }
 
 .Flexible {
@@ -38,7 +36,6 @@ img {
   font-size: 20px;
   font-style: italic;
   font-family: "Gentium Book Plus", serif;
-  width: 45%;
 }
 .Explicacion-Noticia,
 .Noticia-Messi {
